...
    onReload: () -> Unit
) {
    Card(
        modifier = Modifier
            .fillMaxWidth()
            .padding(8.dp)
            .testTag("pokemon-card"),
        elevation = CardDefaults.cardElevation(defaultElevation = 4.dp)
    ) {
        Column(
            modifier = Modifier.padding(16.dp),
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
...
    imageToShow?.let { image ->
        Image(
            bitmap = image,
            contentDescription = "Pokemon",
            modifier = Modifier
                .size(250.dp)
                .testTag("pokemon-image")
        )
    }
}

@Composable
private fun ImageToggleButton(
...
